# instruct_tri2tri

./: 1.py  caption2instruct.ipynb  caption2instruct.py  caption2instruct1.py  gradio_app.py  image2triplane.py  instruct2image.py  instruct_tri2tri_run.py  instruct_tri2tri_train.py  latent_run.py  latentimage_tokenizer_train.py  preprocess_datas.ipynb  pyproject.toml  run.py  test.ipynb  train.ipynb
instruct_tri2tri/tinyllama_ft/train/: finetune.py  finetune_mem.py
instruct_tri2tri/tsr/: pipeline_stable_diffusion_instruct_pix2pix.py  system.py  utils.py
instruct_tri2tri/tsr/instruct_tri2tri_config/: config.yaml
instruct_tri2tri/tsr/models/tokenizers/: image.py  latentimage.py  text.py
scripts/: caption2instruct.sh  finetune.sh  finetune_dora.sh  image2triplane.sh  instruct2image.sh  instruct_tri2tri_train.sh  latentimage_tokenzier_train.sh  run.sh
