[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instruct-tri2tri"
version = "0.0.1"
description = "instruct-tri2tri"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2",
    "transformers==4.37.2", "tokenizers==0.15.0", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.26.0", "peft==0.9.0", "bitsandbytes==0.41.0",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "diffusers", "rembg",
    "trimesh", "omegaconf", "git+https://github.com/tatsy/torchmcubes.git"
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.wheel]
exclude = ["tests*"]
